--- a/css/styles.css
+++ b/css/styles.css
@@ -13,10 +13,19 @@
 }
 
 .transparend-div {
-    background-color: hsla(0, 0%, 0%, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 .header {
     padding: 40px 0px 0px 0px; 
+}
+
+.section-login {
+    height: 100vh;
+    padding: 90px 0px 0px 0px;
+}
+
+.section-signin {
+    padding: 90px 0px 0px 0px;
 }
 
 .section-2 {
@@ -32,7 +41,13 @@
 }
 .p {
     font-size: 16px;
-} 
+}
+
+.border-div {
+    height: 100vh;
+    border: 2px solid #333333;
+    border-radius: 10px;
+}
 
 @media screen and (max-width: 726px) {
     .welcome {
@@ -41,8 +56,17 @@
 } 
 
 @media screen and (max-width: 510px) {
-    .welcome {
-        margin: 10px;
+    .parallax-container, .section {
+        height: 100vh;
+    }
+    .welcome, .container {
+        padding-top: 60px;
+    }
+    .section-2 {
+        padding-top: 250px;
+    }
+    .header {
+        text-align: center;
     }
 } 
 
@@ -54,7 +78,4 @@
         font-size: 11px;
     }
 
-    h2.h2 {
-        font-size: 40px;
-    }
 } 
