se han echo correcciones del dashboard en la parte de front-end y se termino parte grafica de los rides

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,10 @@
     border-radius: 10px;
 }
 
+textarea {
+    height: 100px;
+}
+
 @media screen and (max-width: 726px) {
     .welcome {
         margin: 50px;
