--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,15 @@
+.form-style {
+    width: 60%;
+    padding: 32px 48px 0px 48px; 
+    border: 1px solid #EEE;
+}
+
 .content {
     margin: 55px 0px 0px 0px;
 }
 
 .welcome {
-    margin: 80px;
+    margin: 80px 100px 0px 100px;
 }
 
 .container-fluid nav {
@@ -20,12 +26,11 @@
 }
 
 .section-login {
-    height: 100vh;
-    padding: 90px 0px 0px 0px;
+    padding: 80px 0px 20px 0px;
 }
 
 .section-signin {
-    padding: 90px 0px 0px 0px;
+    padding: 80px 0px 20px 0px;
 }
 
 .section-2 {
@@ -46,38 +51,40 @@
 .border-div {
     height: 100vh;
     border: 2px solid #333333;
-    border-radius: 10px;
+    border-radius: 10px; 
 }
 
 textarea {
     height: 100px;
 }
 
+#name-nav-out {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.label {
+    float: center;
+    font-size: 17px;
+}
+
 @media screen and (max-width: 726px) {
+    .form-style {
+        width: 100%;
+    }
+
     .welcome {
         margin: 50px;
     }
 } 
 
 @media screen and (max-width: 510px) {
-    .parallax-container, .section {
-        height: 100vh;
-    }
-    .welcome, .container {
-        padding-top: 60px;
-    }
-    .section-2 {
-        padding-top: 250px;
-    }
     .header {
         text-align: center;
     }
 } 
 
 @media screen and (max-width: 389px) {
-    .welcome {
-        margin: 0px;
-    }
     p.p {
         font-size: 11px;
     }
